auto session revocation modified again. instead of using local storage, we just revoke the session if the user access to Sign page
