# docs/swagger.yaml
@@ -82,6 +82,24 @@ paths:
         after validation.
       tags:
       - auth
+  /session/revoke:
+    delete:
+      description: gets hus session token from cookie and revoke it by deleting it
+        from database.
+      parameters:
+      - description: Hus session token in cookie
+        in: header
+        name: jwt
+        required: true
+        type: string
+      responses:
+        "200":
+          description: Ok
+        "500":
+          description: doesn't have to be handled
+      summary: gets hus session token from cookie and revoke it.
+      tags:
+      - auth
   /social/google/{subservice_name}:
     post:
       consumes:
